// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nightingale-sequence tests it should display the sequence correctly 1`] = `
<nightingale-sequence
  length="15"
  sequence="MAMYDDEFDTKASDL"
  style="display: block; width: 100%;"
>
  <div
    class=""
  >
    <svg
      height="44"
      id=""
      width="100"
    >
      <g
        class="background"
      />
      <g
        class="x axis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="middle"
        transform="translate(12.666666666666666,0)"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(21.833333333333332,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(48.5,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            10
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(75.16666666666667,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            15
          </text>
        </g>
      </g>
      <g
        class="sequence"
        style="opacity: -2.666666666666667;"
        transform="translate(0,33)"
      />
      <g
        class="highlighted"
      />
    </svg>
  </div>
</nightingale-sequence>
`;

exports[`nightingale-sequence tests it should display the sequence correctly after highlight 1`] = `
<nightingale-sequence
  highlight="2:5"
  length="15"
  sequence="MAMYDDEFDTKASDL"
  style="display: block; width: 100%;"
>
  <div
    class=""
  >
    <svg
      height="44"
      id=""
      width="100"
    >
      <g
        class="background"
      />
      <g
        class="x axis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="middle"
        transform="translate(12.666666666666666,0)"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(21.833333333333332,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(48.5,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            10
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(75.16666666666667,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            15
          </text>
        </g>
      </g>
      <g
        class="sequence"
        style="opacity: -2.666666666666667;"
        transform="translate(0,33)"
      />
      <g
        class="highlighted"
      >
        <rect
          fill="rgba(255, 235, 59, 0.8)"
          height="44"
          style="opacity: 0.5; pointer-events: none;"
          width="21.333333333333332"
          x="15.333333333333332"
        />
      </g>
    </svg>
  </div>
</nightingale-sequence>
`;

exports[`nightingale-sequence tests it should display the sequence correctly after zoom 1`] = `
<nightingale-sequence
  displayend="4"
  displaystart="2"
  length="15"
  sequence="MAMYDDEFDTKASDL"
  style="display: block; width: 100%;"
>
  <div
    class=""
  >
    <svg
      height="44"
      id=""
      width="100"
    >
      <g
        class="background"
      >
        <rect
          class="base_bg feature"
          fill="#ccc"
          height="44"
          width="26.666666666666664"
          x="-16.666666666666664"
        />
        <rect
          class="base_bg feature"
          fill="#eee"
          height="44"
          width="26.666666666666664"
          x="10"
        />
        <rect
          class="base_bg feature"
          fill="#ccc"
          height="44"
          width="26.666666666666664"
          x="36.666666666666664"
        />
        <rect
          class="base_bg feature"
          fill="#eee"
          height="44"
          width="26.666666666666664"
          x="63.33333333333333"
        />
        <rect
          class="base_bg feature"
          fill="#ccc"
          height="44"
          width="26.666666666666664"
          x="90"
        />
      </g>
      <g
        class="x axis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="middle"
        transform="translate(23.333333333333332,0)"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0.5,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            2
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(27.166666666666664,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            3
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(53.83333333333333,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            4
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(80.5,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            5
          </text>
        </g>
      </g>
      <g
        class="sequence"
        style="opacity: 1;"
        transform="translate(0,33)"
      >
        <text
          class="base"
          style="pointer-events: none; font-family: monospace;"
          text-anchor="middle"
          x="-3.333333333333332"
        >
          M
        </text>
        <text
          class="base"
          style="pointer-events: none; font-family: monospace;"
          text-anchor="middle"
          x="23.333333333333332"
        >
          A
        </text>
        <text
          class="base"
          style="pointer-events: none; font-family: monospace;"
          text-anchor="middle"
          x="50"
        >
          M
        </text>
        <text
          class="base"
          style="pointer-events: none; font-family: monospace;"
          text-anchor="middle"
          x="76.66666666666666"
        >
          Y
        </text>
        <text
          class="base"
          style="pointer-events: none; font-family: monospace;"
          text-anchor="middle"
          x="103.33333333333333"
        >
          D
        </text>
      </g>
      <g
        class="highlighted"
      />
    </svg>
  </div>
</nightingale-sequence>
`;
